# pms-price-engine

./: .dockerignore  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
dashboard/: pyproject.toml
dashboard/src/dashboard/: __init__.py
diagrams/: phase-1-mock-app-db.md
docs/: AUDIT_DIARY.md
docs/adr/: ADR-0001-kafka-kinesis-split.md  ADR-0002-pyflink-over-java-flink.md  ADR-0003-payment-line-cdc-contract.md  ADR-0004-pandas-version-pin.md
error-handling/: debezium-date-decimal-wire-encoding-mismatch.md  debezium-default-key-breaks-partition-affinity.md  debezium-default-topic-naming-mismatch.md  debezium-heartbeat-topic-stalls-entire-connector.md
infra/: docker-compose.yml
infra/debezium/: postgres-connector.json
infra/debezium/custom-converters/: pom.xml
infra/debezium/custom-converters/src/main/java/com/pms/debezium/: DateStringConverter.java
infra/localstack/: init-aws.sh
infra/terraform/: main.tf  outputs.tf  variables.tf
libs/common/: pyproject.toml
libs/common/src/common/: __init__.py  logging.py
libs/shared-schemas/: pyproject.toml
services/market-ingestor/: pyproject.toml
services/mock-pm-app/: Dockerfile  pyproject.toml
services/mock-pm-app/src/mock_pm_app/: data.py  generator.py  main.py  rows.py  seed.py  settings.py
specs/: pyproject.toml
specs/contracts/: conftest.py  test_market_price_contract.py  test_payment_line_contract.py  test_price_decision_contract.py
specs/contracts/fixtures/market_price/: invalid_missing_required.json  valid_snapshot.json
specs/contracts/fixtures/payment_line/: invalid_cdc_metadata_leak.json  invalid_legacy_nested_supplier.json  invalid_missing_required.json  valid_insert.json  valid_update.json
specs/contracts/fixtures/price_decision/: invalid_missing_required.json  valid_market_competitive.json
specs/events/: market_price.v1.json  payment_line.v1.json  price_decision.v1.json
specs/phases/01-cdc-pipeline/: payment_lines.sql  spec.md
specs/phases/01-mock-app-db/: payment_lines.sql  spec.md
specs/phases/02-cdc-pipeline/: spec.md
streaming/flink-jobs/: pyproject.toml
streaming/flink-jobs/src/flink_jobs/: __init__.py
