[project]
name = "dashboard"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.58.0",
    "boto3>=1.43.0",
    "pandas>=3.0.0",
    "shared-schemas",
    "common",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dashboard"]
