[project]
name = "market-ingestor"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.43.0",
    "httpx>=0.28.0",
    "shared-schemas",
    "common",
]

[tool.uv.sources]
shared-schemas = { workspace = true }
common = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/market_ingestor"]
