[project]
name = "mock-pm-app"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "psycopg[binary]>=3.2.0",
    "pydantic-settings>=2.14.0",
    "structlog>=26.1.0",
    "shared-schemas",
    "common",
]

[tool.uv.sources]
shared-schemas = { workspace = true }
common = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mock_pm_app"]
