[project]
name = "flink-jobs"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "apache-flink>=2.3.0",
    "shared-schemas",
    "common",
]

[tool.uv.sources]
shared-schemas = { workspace = true }
common = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/flink_jobs"]
